tests/expectations/compiler/constructor/admin_constructor_does_not_match_fail.out
Error [ETYC0372156]: A 'noupgrade', 'admin', or 'checksum' constructor must be empty. The Leo compiler will insert the appropriate code.
    --> compiler-test:4:5
     |
   4 |     @admin(address = "aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px")
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   5 |     constructor() {
     |     ^^^^^^^^^^^^^^^
   6 |         assert_eq(true, true);
     |         ^^^^^^^^^^^^^^^^^^^^^^
   7 |     }
     |     ^
